--- a/templates/res_by_lga.html
+++ b/templates/res_by_lga.html
@@ -15,8 +15,8 @@
 
     {% if n %}
     <div class="m-auto mt-5" style="max-width: 600px;">
-        <h6 class="lead fw-bold"><span class="badge bg-success">LGA : </span> {{ lg_name }}</h6>
-        <table class="table table-bordered table-sm table-responsive">
+        <h6 class=""><span class="badge bg-success">LGA : </span> {{ lg_name }}</h6>
+        <table class="table table-bordered table-responsive-sm">
             <tr>
                 <th class="text-center bg-success text-white">PDP</th>
                 <th class="text-center bg-success text-white">DPP</th>
