--- a/templates/displayres.html
+++ b/templates/displayres.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="m-auto" style="max-width: 600px;">
         <table class="table table-bordered table-sm table-responsive">
-            <h5 class="lead fw-bold"><span class="badge bg-success"> Polling Unit Name:</span> {{ pu.polling_unit_name.upper() }}</h5>
+            <h6 class=""><span class="badge bg-success"> Polling Unit Name:</span> {{ pu.polling_unit_name.upper() }}</h6>
             <tr>
                 <th class="text-center bg-success text-white">Party</th>
                 <th class="text-center bg-success text-white">Score</th>
