modified for responsiveness

--- a/templates/res_by_lga.html
+++ b/templates/res_by_lga.html
@@ -18,25 +18,43 @@
         <h6 class=""><span class="badge bg-success">LGA : </span> {{ lg_name }}</h6>
         <table class="table table-bordered table-responsive-sm">
             <tr>
-                <th class="text-center bg-success text-white">PDP</th>
-                <th class="text-center bg-success text-white">DPP</th>
-                <th class="text-center bg-success text-white">ACN</th>
-                <th class="text-center bg-success text-white">PPA</th>
-                <th class="text-center bg-success text-white">CDC</th>
-                <th class="text-center bg-success text-white">JP</th>
-                <th class="text-center bg-success text-white">ANPP</th>
-                <th class="text-center bg-success text-white">LABOUR</th>
-                <th class="text-center bg-success text-white">CPP</th>
+                <th class="bg-success text-white text-center">Party</th>
+                <th class="bg-success text-white text-center">Total Scores</th>
             </tr>
             <tr>
+                <td class="text-center fw-bold">PDP</td>
                 <td class="text-center fw-bold">{{PDP}}</td>
+            </tr>
+            <tr>        
+                <td class="text-center fw-bold">DPP</td>
                 <td class="text-center fw-bold">{{DPP}}</td>
+</tr>
+<tr>
+                <td class="text-center fw-bold">ACN</td>
                 <td class="text-center fw-bold">{{ACN}}</td>
+</tr>
+<tr>
+                <td class="text-center fw-bold">PPA</td>
                 <td class="text-center fw-bold">{{PPA}}</td>
+</tr>
+<tr>
+                <td class="text-center fw-bold">CDC</td>
                 <td class="text-center fw-bold">{{CDC}}</td>
+</tr>
+<tr>
+                <td class="text-center fw-bold">JP</td>
                 <td class="text-center fw-bold">{{JP}}</td>
+</tr>
+<tr>
+                <td class="text-center fw-bold">ANPP</td>
                 <td class="text-center fw-bold">{{ANPP}}</td>
+</tr>
+<tr>
+                <td class="text-center fw-bold">LABOUR</td>
                 <td class="text-center fw-bold">{{LABOUR}}</td>
+</tr>
+<tr>
+                <td class="text-center fw-bold">CPP</td>
                 <td class="text-center fw-bold">{{CPP}}</td>
             </tr>
         </table>
